--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8090
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:h2:~/test
 
 spring.h2.console.enabled=true
